# oeee-cafe

./: .dockerignore  .env.sample  .gitignore  .gitmodules  CLAUDE.md  COLLABORATIVE_DRAWING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  bacon.toml  deploy.sh  docker-compose.yml  mise.toml  package.json  pyproject.toml
.github/: dependabot.yml
.sqlx/: query-0076502e416bb19f0f659dbcb17e85a922e2587f0cefb98b16efc3b76c1a4e1d.json  query-00b42dd2858721a6990a3014f99fcfd8be55434b3f84f63bd2e9408ac6359ca0.json  query-00cda6a1575679f4f301217b0d0d96e275a765320d32ecc251e620e1c3ce28d7.json  query-02cbaedf0240720fd61570a5977bbcb251c1eebb758b51e4281b54f420bee1e3.json  query-04b02db874636f0a99f9342568cb69ba9c5642f853e734c6856547dffcd4f3ab.json  query-098fda45f269b72131fa065ee2b5071ed4f70855561de2e9ed5597308110820e.json  query-0ae861abc84d3754ff12e47a99a8f59045c8ff35520675421e2345a725cc69ad.json  query-0b0d7dc4c09541d77f56e8aadd72ff6f7090dd438f39395847465f9558544185.json  query-0b3b7b88c7edaa1f9685cef44fcf85975aa37943e623631d39b9e06f1d443f9b.json  query-0c60ec0ded6d022c0ed76593f3b93bfce48685a327730015e98da4edccddbe8e.json  query-0cda2423f3f5d9124669cf9c5d12d39e91a54ff0dd4d888f3768fb8356ffee5b.json  query-0d2ae3a93c48c5c31922ba7215f39e797693065676009ff17f4914e24758506d.json  query-0ea2167e01653b077f33bd0e602f4816ff6f6925ae2ddc667ea09395520174c4.json  query-0f8cdb0c584b77b5d9587ffddeb6cb66fd7d6641dfab2c3b3fc4f1a105736af4.json  query-0fdd858cfe0a00ba3b694283491b91cee016ed51fa4406509749c7fdadee8942.json  query-0fe1fc9edf1a63c24003697cbcba68b5fde9890f7b054c39cfeee6ae7dc472fb.json  query-10cfe9cb30afecae49df5a6094736493a1a928787ba0bebd370158412d1e0147.json  query-11f5831c9168c4348d5d1a8637351f8ce23fd9ac3afd20102e476f7ae8c8cc5e.json  query-15d1cbc18b89153eb562ff5950bf74837a518e5760766423ee355a2a89b3796c.json  query-1c304a7b87eb3e89f634ced6ae0e6b680e45a7c83027721b6395504a63456d27.json  query-1c8c5486e58c983d4c037a6b053b9d1e363d6847baae5d662f4220ca9a626098.json  query-202b9ab3ae504d304af8db4ddcf6b37e5364cdd650953a1477c0a17c3491e98c.json  query-21f9147db11caaf575fdb80ce966cf7673d3226f49ab26bf1ec213c20c30ca65.json  query-226212907c5f450acd16d9548fa8b3910968030544fbe302353ef735a5c86d0b.json  query-2376e0141a1c28095c10f8763049989a5221d0e2ea7f76f1ada582a9b2d0ae18.json  query-24cff9486cbaeeb2c8763a547320cc2865f713816e465825564c6840c68a7fb9.json  query-24dc179794efd43ba1ad034bca76d5443f168270cceafb1a4e9eb1e8509d3277.json  query-260442311f4a7805b54b2eb61ad7ca49d8975768031021e07fc1edd74b97ec65.json  query-26114b581350359c25927bb2cc918d4f4587bd4994962f11c558047daa620e94.json  query-26f1371dc090e15baeacb48c5c2d37b2aadb8c28758a051e9f3e1eca7ead9a14.json  query-2a4bb9a8c017cfbd617f09a937274eb8e74258e47bf39e42471218ed0ae38a8d.json  query-2c721dfd0af2cdce5afefad0f97f225a018a34065f1ab9dd8f26194cd791826e.json  query-2e2c55ebc347f13c38902ea5cdf7fb1e36bb3a1f5b447aa1bfcc961c7cd58ac6.json  query-2e92443701c6672fe576798b1d2666974176e60f7a8c2c028e46162f7f06cce2.json  query-2f70fe9e486b8adacbfe1578eec537ccfeb3da2cc71528645210e2786457d3e6.json  query-3263e08b98e1af1dfa4626877d518ed25eb57c36ccab2d10eb5c70a7b89df6ef.json  query-328796406dce4c28aad84e152d101153caaaef363216dc248d5a4a03ddbdc898.json  query-337c0711f3d7b7d4694e26414b81743d1c9a21b297eae47e84aef66baa292a73.json  query-3447c444966f3d87cb4861bb4ab65c5fb90f938c47ea964559f89c84024333fc.json  query-348a4fd8e20b8e3e5a9561a8b9d08e5afb5cc1d2799ef212afb474c49cfc6484.json  (+102 more)
config/: sample.toml
cucumber/: .gitignore  cucumber.ts  package-lock.json  package.json  tsconfig.json
locales/: en.ftl  ja.ftl  ko.ftl  zh.ftl
migrations/: 20240316095046_init.down.sql  20240316095046_init.up.sql  20240323000044_add_post_viewer_count.down.sql  20240323000044_add_post_viewer_count.up.sql  20240323014415_add_post_comments.up.sql  20240330014054_follow.up.sql  20240330042038_image.down.sql  20240330042038_image.up.sql  20240330055631_banner.down.sql  20240330055631_banner.up.sql  20240331010214_user_check_constraints.down.sql  20240331010214_user_check_constraints.up.sql  20240331104936_make_user_email_nullable.down.sql  20240331104936_make_user_email_nullable.up.sql  20240331110742_add_email_verification.down.sql  20240412214627_add_links.up.sql  (+124 more)
(+275 files in other folders)
