[package]
name = "oeee-cafe"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
aws-sdk-s3 = "1.19.1"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-login = "0.14.0"
axum-messages = "0.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.8.6"
config = "0.14.0"
data-encoding = "2.5.0"
data-url = "0.3.1"
hex = "0.4.3"
humantime = "2.1.0"
lettre = "0.11.6"
minijinja = { version = "1.0.12", features = ["loader"] }
minijinja-contrib = { version = "1.0.12", features = ["datetime", "timezone"] }
rand = "0.8.5"
sentry = { version = "0.32.2", features = ["anyhow"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
sha256 = "1.5.0"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-sessions = "0.11.0"
tower-sessions-sqlx-store = { version = "0.11.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.7.4"
features = [
    "macros",
    "uuid",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
]
