[package]
name = "oeee-cafe"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "oeee-cafe"

[[bin]]
name = "cli"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = { version = "0.6.5", features = ["axum"] }
activitystreams-kinds = "0.3.0"
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
async-trait = "0.1.89"
aws-sdk-s3 = "1.19.1"
axum = { version = "0.7.4", features = ["macros", "multipart", "ws"] }
axum-login = "0.16.0"
axum-macros = "0.5.0"
axum-messages = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
data-encoding = "2.9.0"
data-url = "0.3.1"
enum_delegate = "0.2.0"
fluent = "0.16.0"
fluent-langneg = "0.14.0"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
humantime = "2.1.0"
icu_locid = "1.5.0"
intl-memoizer = "0.5.1"
lazy_static = "1.4.0"
lettre = "0.11.6"
markdown = "1.0.0"
minijinja = { version = "1.0.12", features = ["loader"] }
minijinja-contrib = { version = "1.0.12", features = ["datetime", "timezone"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7.3.1"
sentry = { version = "0.32.2", features = ["anyhow"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.7.0"
sha256 = "1.5.0"
time = "0.3.34"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.11.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unic-langid = "0.9.4"
url = "2.5.7"
uuid = { version = "1.7.0", features = ["serde"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
bb8-redis = "0.24.0"

[dependencies.sqlx]
version = "0.7.4"
features = [
    "macros",
    "uuid",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
]
